fix: Change background position set to fixed
Page scrolling has no effect for background behavior (no white margins,
when you scroll too much).

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -7,7 +7,7 @@
         padding: 0;
         margin: 0;
         box-sizing: border-box;
-        @apply h-screen w-screen light-bg dark:dark-bg;
+        @apply h-screen w-screen light-bg dark:dark-bg bg-fixed;
     }
 }
 @layer components {
